2010-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/ControlsPalette.gorm:
	Replace the two orphaned radio buttons by a NSMatrix.

2010-01-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Palettes/2Controls/GormButtonAttributesInspector.m(-ok:, -revert:):
	Fix the NSButton inspector to use \r as key equivalent for the
	Return key.

	* GormCore/GormViewWithContentViewEditor.m (-ungroup):
	* GormCore/GormSplitViewEditor.m (-ungroup, -destroyAndListSubviews):
	Remove the former container view from its parent after an ungroup
	operation.

2010-01-14 06:46-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GormDocumentWindow.m: Make window unable to become main.
	This is so that the document window will not receive the menu
	on Windows.
	* GormCore/GormPalettesManager.m: Make the panel able to become main
	so that it can recieve the menu on Windows.

2010-01-06 01:06-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GormCore/GNUmakefile: Add files here.
	* GormCore/GormNSPanel.[hm]
	* GormCore/GormNSWindow.[hm]: Move GormNSPanel.[hm] and 
	GormWindow.[hm] here.
	* Palettes/1Windows/GNUmakefile: Remove files from being compiled
	* Palettes/1Windows/GormNSPanel.h
	* Palettes/1Windows/GormNSPanel.m
	* Palettes/1Windows/GormNSWindow.h
	* Palettes/1Windows/GormNSWindow.m: Remove these from here
	* Palettes/1Windows/GormWindowAttributesInspector.m
	* Palettes/1Windows/WindowsPalette.m: Change to include
	GormNSPanel/GormNSWindow from the correct area.

2009-12-30 23:40-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Plugins/Nib/GormNibWrapperLoader.m: Remove reference to 
	GSClassSwapper and replace it with NSClassSwapper.
	* Plugins/Nib/GormWindowTemplate.m: Override the
	baseWindowClass method to return GormNSWindow as appropriate.

2009-12-27 01:17-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Gorm.m
	* Plugins/Nib/GNUmakefile: Add new class to makefile.
	* Plugins/Nib/GormNibWrapperLoader.m: Modified to use 